Bug 347160 - shouldn't use kfileplaces/bookmarks.xml
Summary: shouldn't use kfileplaces/bookmarks.xml
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-04 13:22 UTC by Harald Sitter
Modified: 2015-05-04 18:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2015-05-04 13:22:32 UTC
As of kdelibs 4.14.8 and kio 5.10 kfileplacesmodel no longer uses the legacy kfileplaces/bookmarks.xml data file to manage the places list but instead uses the new user-places.xbel file.

Currently kdenlive still uses the legacy path to inject its projects folder into the places list [1]. This is not going to work anymore until the file path is changed to the new xbel thing.

Also see bug #345174 for why this change was made and relevant commits.

[1] line 1665 http://lxr.kde.org/source/kde/kdemultimedia/kdenlive/src/doc/kdenlivedoc.cpp

Reproducible: Always
Comment 1 Harald Sitter 2015-05-04 13:33:58 UTC
possible fixy https://git.reviewboard.kde.org/r/123627/
Comment 2 Harald Sitter 2015-05-04 18:44:54 UTC
Git commit ad314e933843cd0658213a6954f22660bf54fe2d by Harald Sitter.
Committed on 04/05/2015 at 18:44.
Pushed by sitter into branch 'v0.9.x'.

port places file path to new user-places.xbel

the legacy bookmarks.xml file is not supported anymore and will stop
syncing with the user-places.xbel starting with the upcoming kio and
kdelibs releases.
REVIEW: 123628

M  +1    -1    src/doc/kdenlivedoc.cpp

http://commits.kde.org/kdenlive/ad314e933843cd0658213a6954f22660bf54fe2d
Comment 3 Harald Sitter 2015-05-04 18:47:00 UTC
Git commit d4c46e775392d422733ed2b202704afb9c4b3266 by Harald Sitter.
Committed on 04/05/2015 at 18:45.
Pushed by sitter into branch 'Applications/15.04'.

port places file path to new user-places.xbel

the legacy bookmarks.xml file is not supported anymore and will stop
syncing with the user-places.xbel starting with the upcoming kio and
kdelibs releases.
REVIEW: 123627

M  +1    -1    src/doc/kdenlivedoc.cpp

http://commits.kde.org/kdenlive/d4c46e775392d422733ed2b202704afb9c4b3266
Comment 4 Jean-Baptiste Mardelle 2015-05-04 18:52:27 UTC
Git commit a3aa13306a907a202b76ed6abb55d2d06dadc673 by Jean-Baptiste Mardelle, on behalf of Harald Sitter.
Committed on 04/05/2015 at 18:52.
Pushed by mardelle into branch 'frameworks'.

port places file path to new user-places.xbel

the legacy bookmarks.xml file is not supported anymore and will stop
syncing with the user-places.xbel starting with the upcoming kio and
kdelibs releases.
REVIEW: 123627

M  +1    -1    src/doc/kdenlivedoc.cpp

http://commits.kde.org/kdenlive/a3aa13306a907a202b76ed6abb55d2d06dadc673