port places file path to new user-places.xbel

the legacy bookmarks.xml file is not supported anymore and will stop
syncing with the user-places.xbel starting with the upcoming kio and
kdelibs releases.

BUG: 347160
REVIEW: 123627